TS-891 TRS fix missing gap between pages in emps modal

--- a/apps/total-rewards/styles.scss
+++ b/apps/total-rewards/styles.scss
@@ -80,7 +80,7 @@ pf-statement-edit.page {
     overflow-x: hidden; // let settings panel hide out to the right
   }
   .statement .trs-page {
-    margin-bottom: 1rem; // show a gap in between pages in the editor so users can see where a page begins and ends
+    margin-bottom: $web-view-page-margin; // show a gap in between pages in the editor so users can see where a page begins and ends
   }
   .preview-mode {
     .page-header button {
