--- a/assets/scss/total-rewards/_statement-layout-variables.scss
+++ b/assets/scss/total-rewards/_statement-layout-variables.scss
@@ -2,3 +2,4 @@ $canvas-width: 860px;
 $left-nav-transition: left .3s, width .3s;
 $footer-bar-height: 46px;
 $graphics-color-transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+$web-view-page-margin: 1rem;
